# cozloff

./: .env.ex  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
containerd/: Cargo.toml  Dockerfile  README.md
containerd/src/: main.rs
data/composition/: element_abundances.json
data/earth/: shell_specs.json  shells.json
docs/: uring.md
dpdk/: Cargo.toml  build.rs
dpdk/src/: main.rs  runtime.rs
io_uring/: Cargo.toml  README.md
io_uring/src/: audio_log.rs  audio_source.rs  iouring_abi.rs  main.rs  uring.rs  writer.rs
network/: Cargo.toml  Dockerfile
network/src/: domain.rs  geo.rs  handlers.rs  main.rs  models.rs  probe.rs  routes.rs
network/src/application/: services.rs
network/src/application/ports/: input.rs  output.rs
network/src/application/ports/input/: network_trace.rs
network/src/application/ports/output/: azure_locations.rs  network_trace.rs
network/src/application/services/: azure_locations.rs  trace_paths.rs
network/src/domain/: azure.rs  network.rs
network/src/infrastructure/adapters/: output.rs
network/src/infrastructure/adapters/input/: handlers.rs  routes.rs
network/src/infrastructure/adapters/output/: azure.rs  geo.rs  probe.rs  questdb.rs
src/: catalog.rs  domain.rs  earth_view.rs  main.rs  matmul.rs  wave.rs
src/catalog/: astral.rs  earth.rs
src/domain/: composition.rs  earth.rs  element.rs  shell_spec.rs
src/earth_view/: material.rs  mesh.rs
