[package]
name = "cozloff"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_winit",
    "multi_threaded",
    "x11",
] }
