[package]
name = "cozloff"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.21.0", features = ["cuda"] }
polars = { version = "0.53.0", features = ["json"] }
rerun = { version = "0.32.2", default-features = false, features = ["sdk"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
