[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
azure_identity = "0.21.0"
azure_mgmt_resources = { version = "0.21.0", default-features = false, features = ["enable_reqwest", "package-subscriptions-2021-01"] }
reqwest = { version = "0.12.24", features = ["json"] }
scalar_api_reference = { version = "0.1.0", features = ["axum"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.52.3", features = ["process", "rt-multi-thread", "macros", "net"] }
